# selfauto

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
examples/hello_world/: main.py
src/selfauto/: config.py  service.py
src/selfauto/components/: basic_component.py
src/selfauto/components/database/: database_component.py
src/selfauto/components/database_legacy/: __init__.py  database_component.py
src/selfauto/components/events/: __init__.py  basic_event.py  events_component.py  listener.py
src/selfauto/components/gitlab/: __init__.py  gitlab_component.py  requests_client.py
src/selfauto/components/scheduler/: __init__.py  event.py  scheduler_component.py
src/selfauto/components/telegram/: __init__.py  telegram_component.py
src/selfauto/components/webserver/: __init__.py  basic_middleware.py  webserver_component.py
src/selfauto/utils/: access.py  asyncio.py
